test/rbkt/Queries/zorba/syntax_errors/NumericLiteral_invalid.xq
(: 
  Syntax error with an improved error message:
  invalid numeric literal
:)

123bad